--- a/src/assets/style/SideBar.css
+++ b/src/assets/style/SideBar.css
@@ -1,5 +1,42 @@
 .sidebar{
     background-color : #0036C2;
-    height: 100%;
-    width: 20vw;
+    height: 100vh;
+    width: 25vw;
+    max-width: 500px;
+}
+
+.logo{
+    margin-top: 5vw;
+    max-width: 25vw;
+    max-height: 25vh;
+    background-color: white;
+    border-radius: 180px;
+}
+
+.presentationTxt{
+    color: white;
+    width: 100%;
+    margin-top: 10vh;
+}
+
+.footer{
+    color : grey;
+    width: 100%;
+    margin-top: 22vh;
+}
+.reseaux{
+    margin-top: 2vh;
+    display: flex;
+    margin-left: 7vw;
+}
+.reseaux > a > img{
+    margin-left: 1vw;
+    width: 40px;
+    height: 40px;
+    border-radius: 180px;
+    background-color: white;
+}
+
+.reseaux > a > img:hover{
+    background-color: red;
 }
