--- a/src/assets/style/Forms.css
+++ b/src/assets/style/Forms.css
@@ -30,6 +30,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    width: 60%;
     margin-top: 35px;
 }
 
@@ -38,7 +39,6 @@
 }
 
 .login-input{
-    width: 500px;
     padding: 15px 25px;
     background-color: #E4E4E4;
     border: none;
@@ -60,4 +60,22 @@
     width: 2px;
     height: 20px;
     background-color: rgb(0, 61, 204);
+}
+
+.login-form-submit{
+    padding: 10px 15px;
+    background-color: rgb(0, 61, 204);
+    border-radius: 25px;
+    border: solid 2px transparent;
+    color: #FFF;
+    font-size: 1.4rem;
+    font-weight: 600;
+    cursor: pointer;
+}
+
+.login-form-submit:hover{
+    background-color: #fff;
+    border: solid 2px rgb(0, 61, 204);
+    color: rgb(0, 61, 204);
+    transition: all 0.12s ease-in;
 }
