--- a/src/assets/style/SideBar.css
+++ b/src/assets/style/SideBar.css
@@ -6,11 +6,12 @@
 }
 
 .logo{
-    margin-top: 5vw;
-    max-width: 25vw;
-    max-height: 25vh;
+    margin-top: 2vw;
+    width: 15vw;
+    height: 15vw;
     background-color: white;
     border-radius: 180px;
+    margin-left: 2vw;
 }
 
 .presentationTxt{
@@ -27,12 +28,12 @@
 .reseaux{
     margin-top: 2vh;
     display: flex;
-    margin-left: 7vw;
+    margin-left: 3.5vw;
 }
 .reseaux > a > img{
     margin-left: 1vw;
-    width: 40px;
-    height: 40px;
+    width: 3vw;
+    height: 3vw;
     border-radius: 180px;
     background-color: white;
 }
