--- a/src/assets/scss/components/_forms.scss
+++ b/src/assets/scss/components/_forms.scss
@@ -12,22 +12,23 @@
     align-items: center;
     justify-content: center;
 }
-.title{
-    margin-bottom: 25px;
+.form-header-title{
+    font-size: 64px;
+    font-weight: bold;
+    margin-bottom: 45px;
 }
 
-.icon{
+.form-header-socials{
     display: flex;
-    margin-left: 19%;
-    width: fit-content;
     justify-content: center;
+    align-items: center;
 }
 
-.image{
+.form-header-image{
     background-color: gray;
     border-radius: 50%;
-    width: 10%;
-    margin-left: 3%;
+    width: 45px;
+    margin: 0 15px;
     background-color: black;
 }
 
@@ -42,20 +43,23 @@
 
 .input-container{
     position: relative;
+    margin-bottom: 45px;
 }
 
 .login-input{
+    font-size: 21px;
     padding: 15px 25px;
     background-color: #E4E4E4;
     border: none;
-    padding-left: 70px;
-    margin-bottom: 15px;
+    padding-left:70px;
 }
 
-.login-input-icons{
-    position: absolute;
-    top: calc(50% - 20px);
-    left: 10px;
+.login-input-email{
+    background: url("../../icons/sms.svg") no-repeat scroll 10px 10px #E4E4E4;
+}
+
+.login-input-password{
+    background: url("../../icons/key.svg") no-repeat scroll 10px 10px #E4E4E4;
 }
 
 .input-container::after{
@@ -72,16 +76,16 @@
     padding: 10px 15px;
     background-color: rgb(0, 61, 204);
     border-radius: 25px;
-    border: solid 2px transparent;
+    border: solid 3px transparent;
     color: #FFF;
-    font-size: 1.4rem;
+    font-size: 2rem;
     font-weight: 600;
     cursor: pointer;
 }
 
 .login-form-submit:hover{
     background-color: #fff;
-    border: solid 2px rgb(0, 61, 204);
+    border: solid 3px rgb(0, 61, 204);
     color: rgb(0, 61, 204);
     transition: all 0.12s ease-in;
 }
