--- a/src/assets/scss/components/_forms.scss
+++ b/src/assets/scss/components/_forms.scss
@@ -1,3 +1,6 @@
+@use '../variables/colors';
+@use '../variables/fonts';
+
 .forms-page-container{
     width: 100%;
     height: 100vh;
@@ -25,11 +28,11 @@
 }
 
 .form-header-image{
-    background-color: gray;
+    background-color: colors.$black;
     border-radius: 50%;
-    width: 45px;
+    width: 55px;
+    padding: 7px;
     margin: 0 15px;
-    background-color: black;
 }
 
 .login-form-container{
@@ -55,11 +58,11 @@
 }
 
 .login-input-email{
-    background: url("../../icons/sms.svg") no-repeat scroll 10px 10px #E4E4E4;
+    background: url("../../icons/sms.svg") no-repeat scroll 10px 10px #E4E4E4 !important;
 }
 
 .login-input-password{
-    background: url("../../icons/key.svg") no-repeat scroll 10px 10px #E4E4E4;
+    background: url("../../icons/key.svg") no-repeat scroll 10px 10px #E4E4E4 !important;
 }
 
 .input-container::after{
