--- a/src/assets/scss/components/_sidebar.scss
+++ b/src/assets/scss/components/_sidebar.scss
@@ -1,42 +1,55 @@
+@use '../variables/colors';
+@use '../variables/fonts';
+
 .sidebar{
     background-color : #0036C2;
     height: 100vh;
     width: 25vw;
-    max-width: 500px;
+    max-width: 450px;
+    padding: 0 25px;
 }
 
-.logo{
-    margin-top: 5vw;
-    max-width: 25vw;
-    max-height: 25vh;
+.sidebar-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 125px;
+}
+.sidebar-logo{
+    width: 150px;
     background-color: white;
-    border-radius: 180px;
+    border-radius: 100px;
 }
 
-.presentationTxt{
+.sidebar-content{
     color: white;
     width: 100%;
-    margin-top: 10vh;
+    margin-top: 100px;
+    font-size: 18px;
 }
 
-.footer{
-    color : grey;
+.sidebar-footer{
+    color : rgb(187, 187, 187);
     width: 100%;
-    margin-top: 22vh;
+    margin-top: 150px;
 }
-.reseaux{
+
+.sidebar-reseaux{
     margin-top: 2vh;
     display: flex;
-    margin-left: 7vw;
-}
-.reseaux > a > img{
-    margin-left: 1vw;
-    width: 40px;
-    height: 40px;
-    border-radius: 180px;
-    background-color: white;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.4rem;
 }
 
-.reseaux > a > img:hover{
-    background-color: red;
-}
+.sidebar-reseaux {
+    a {
+        img {
+            margin-left: 1vw;
+            width: 40px;
+            height: 40px;
+            border-radius: 180px;
+            background-color: white;
+        }
+    }
+} 
