add fontawesome icons

--- a/src/assets/scss/components/_sidebar.scss
+++ b/src/assets/scss/components/_sidebar.scss
@@ -44,16 +44,10 @@
     font-size: 1.4rem;
 }
 
-.sidebar-reseaux {
-    a {
-        img {
-            margin-left: 1vw;
-            width: 40px;
-            height: 40px;
-            border-radius: 180px;
-            background-color: white;
-        }
-    }
+.sidebar-socials {
+    margin: 0 10px;
+    font-size: 2rem;
+    color: white;
 }
 
 
