Ajout du responsive de la sidebard + modif _mixins.scss

--- a/src/assets/scss/variables/_mixins.scss
+++ b/src/assets/scss/variables/_mixins.scss
@@ -5,7 +5,7 @@
 /// @require size.$breakpoints
 @mixin breakpoint-up($breakpoint) {
   @if map-has-key(size.$breakpoints, $breakpoint) {
-    @media (min-width: map-get(size.$breakpoints, $breakpoint)) {
+    @media (max-width: map-get(size.$breakpoints, $breakpoint)) {    //changed from min-width to max-width 
       @content;
     }
   }
