--- a/src/assets/scss/components/_sidebar.scss
+++ b/src/assets/scss/components/_sidebar.scss
@@ -2,6 +2,7 @@
 @use '../variables/fonts';
 @use '../variables/mixins';
 
+
 .sidebar {
     background-color: #0036C2;
     height: 100vh;
@@ -9,7 +10,9 @@
     max-width: 450px;
     padding: 0 25px;
 }
-
+.sidebar input[type="checkbox"] {
+    display: none;
+}
 .sidebar-container {
     display: flex;
     align-items: center;
@@ -50,5 +53,43 @@
     color: white;
 }
 
+.sidebar-menu-icon {
+    color: #fff;
+    font-size: 18px;
+    cursor: pointer;
+    display: none;
 
-@include mixins.breakpoint-up('medium') {}
+}
+
+@include mixins.breakpoint-up('medium') {
+    .sidebar-menu-icon {
+        display: block;
+        color: gray;
+    }
+    .sidebar #show-menu:checked ~ .sidebar-menu-icon i::before {
+        font-size: xx-large;
+        content: "\f00d";                           
+    }
+    .content {
+        display: block;
+        position: fixed;
+    background: red;
+    height: 100%;
+    width: 100%;
+    left: -100%;
+    margin-left: 0;
+    max-width: 350px;
+    overflow-y: auto;
+    padding-bottom: 100px;
+    transition: all 0.3s ease;
+    z-index: 1;
+    }
+
+    .sidebar #show-menu:checked ~ .content {
+        left: 0;
+    }
+    .sidebar #show-menu:checked ~ .content {
+        display: block;
+    }
+
+}
