redirection to create account page + new route

--- a/src/assets/scss/components/_forms.scss
+++ b/src/assets/scss/components/_forms.scss
@@ -50,9 +50,17 @@
     margin-top: 35px;
 }
 
-.input-container {
+.input-containeremail {
     position: relative;
     margin-bottom: 45px;
+}
+.input-containerpsw {
+    position: relative;
+}
+.new-account-button{
+    border: transparent;
+    background-color: transparent;
+    margin-bottom: 40px;
 }
 
 .login-input {
