--- a/src/assets/scss/components/_forms.scss
+++ b/src/assets/scss/components/_forms.scss
@@ -50,7 +50,7 @@
     margin-top: 35px;
 }
 
-.input-containeremail {
+.input-container {
     position: relative;
     margin-bottom: 45px;
 }
@@ -80,6 +80,15 @@
 }
 
 .input-container::after {
+    content: '';
+    position: absolute;
+    top: 15px;
+    left: 50px;
+    width: 2px;
+    height: 20px;
+    background-color: colors.$primary;
+}
+.input-containerpsw::after {
     content: '';
     position: absolute;
     top: 15px;
