add Biography and UserchoiseUpdate and data transition

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -10,6 +10,7 @@
 @use 'components/login';
 @use 'components/sidebar';
 @use 'components/userChoice';
+@use 'components/Biography';
 
 /* 4 - pages */
 
