--- a/src/assets/scss/components/_sidebar.scss
+++ b/src/assets/scss/components/_sidebar.scss
@@ -4,7 +4,7 @@
 
 
 .sidebar {
-    background-color: #0036C2;
+    background-color: colors.$secondary;
     height: 100vh;
     width: 25vw;
     max-width: 450px;
