--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -11,6 +11,7 @@
 @use 'components/sidebar';
 @use 'components/userChoice';
 @use 'components/Biography';
+@use 'components/ASD';
 
 /* 4 - pages */
 
