--- a/src/assets/scss/components/_sidebar.scss
+++ b/src/assets/scss/components/_sidebar.scss
@@ -4,15 +4,24 @@
 
 
 .sidebar {
-    background-color: colors.$secondary;
+    background: hsla(222, 97%, 76%, 1);
+
+    background: linear-gradient(270deg, hsla(222, 97%, 76%, 1) 0%, hsla(274, 66%, 70%, 1) 100%);
+
+    background: -moz-linear-gradient(270deg, hsla(222, 97%, 76%, 1) 0%, hsla(274, 66%, 70%, 1) 100%);
+
+    background: -webkit-linear-gradient(270deg, hsla(222, 97%, 76%, 1) 0%, hsla(274, 66%, 70%, 1) 100%);
+
     height: 100vh;
-    width: 25vw;
-    max-width: 450px;
+    min-width: 300px;
+    max-width: 425px;
     padding: 0 25px;
 }
+
 .sidebar input[type="checkbox"] {
     display: none;
 }
+
 .sidebar-container {
     display: flex;
     align-items: center;
@@ -21,16 +30,13 @@
 }
 
 .sidebar-logo {
-    width: 150px;
-    background-color: white;
-    border-radius: 100px;
+    width: 200px;
 }
 
 .sidebar-content {
-    color: white;
     width: 100%;
     margin-top: 100px;
-    font-size: 18px;
+    font-size: 16px;
 }
 
 .sidebar-footer {
@@ -62,7 +68,7 @@
 }
 
 @include mixins.breakpoint-up('mobile') {
-    .sidebar{
+    .sidebar {
         background-color: transparent;
         height: 100vh;
         width: 100%;
@@ -72,29 +78,32 @@
         z-index: 1;
 
     }
+
     .sidebar-menu-icon {
         display: block;
         color: gray;
     }
-    .sidebar #show-menu:checked ~ .sidebar-menu-icon i::before {
+
+    .sidebar #show-menu:checked~.sidebar-menu-icon i::before {
         font-size: xx-large;
-        content: "\f00d";                           
+        content: "\f00d";
     }
+
     .content {
         display: block;
         position: fixed;
         background-color: #0036C2;
         background-attachment: fixed;
-    height: 200%;
-    left: -100%;
-    margin-left: 0;
-    max-width: 100%;
-    overflow-y: auto;
-    transition: all 0.3s ease;
-    z-index: 1;
+        height: 200%;
+        left: -100%;
+        margin-left: 0;
+        max-width: 100%;
+        overflow-y: auto;
+        transition: all 0.3s ease;
+        z-index: 1;
     }
 
-    .sidebar #show-menu:checked ~ .content {
+    .sidebar #show-menu:checked~.content {
         left: 0;
     }
 }
