--- a/src/assets/scss/variables/_fonts.scss
+++ b/src/assets/scss/variables/_fonts.scss
@@ -1,3 +1,29 @@
 @import url('https: //fonts.googleapis.com/css2?family=Inter:wght@100;300;400;600;700;800&display=swap');
 
-$font-main: 'Inter', sans-serif;
+
+@font-face {
+    font-family: Luciole;
+    src: url("../../font/Luciole-Regular.ttf");
+    font-weight: normal;
+}
+
+@font-face {
+    font-family: Luciole;
+    src: url("../../font/Luciole-Regular-Italic.ttf");
+    font-style: italic;
+}
+
+@font-face {
+    font-family: Luciole;
+    src: url("../../font/Luciole-Bold.ttf");
+    font-weight: bold;
+}
+
+@font-face {
+    font-family: Luciole;
+    src: url("../../font/Luciole-Bold-Italic.ttf");
+    font-style: italic;
+    font-weight: bold;
+}
+
+$font-main: 'Luciole', sans-serif;
