--- a/src/assets/scss/components/_Biography.scss
+++ b/src/assets/scss/components/_Biography.scss
@@ -19,3 +19,16 @@
 .LeftMargin-Button18{
     margin-left: 18em;
 }
+
+.Bio-ignore-font{
+    margin-left: 44em;
+    border-color: transparent;
+    background-color: transparent;
+    font-family: 'Luciole';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    text-decoration-line: underline;
+    color: #5C5C5C;
+}
