--- a/src/assets/scss/components/_sidebar.scss
+++ b/src/assets/scss/components/_sidebar.scss
@@ -4,11 +4,12 @@
 
 
 .sidebar {
-    background-color: colors.$secondary;
+    background: colors.$Degraded;
     height: 100vh;
     width: 25vw;
     max-width: 450px;
     padding: 0 25px;
+    display: flex;
 }
 .sidebar input[type="checkbox"] {
     display: none;
@@ -17,38 +18,58 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: 125px;
+    margin-top: 30vh;
 }
 
 .sidebar-logo {
-    width: 150px;
-    background-color: white;
+    width: 10vw;
+    background-color: red($color: #000000);
     border-radius: 100px;
 }
 
 .sidebar-content {
     color: white;
     width: 100%;
-    margin-top: 100px;
-    font-size: 18px;
+    margin-top: 10px;
+    font-size: 1vw;
 }
 
-.sidebar-footer {
-    color: rgb(187, 187, 187);
-    width: 100%;
-    margin-top: 150px;
-}
-
-.sidebar-reseaux {
-    margin-top: 2vh;
+.sidebar-content-next{
     display: flex;
-    align-items: center;
     justify-content: center;
-    font-size: 1.4rem;
+    font-style: bold;
+    text-decoration: underline;
+    width: 100%;
+    margin-top: 30px;
+    font-size: 1.2vw;
 }
+.sidebar-footer {
+
+    color: black;
+    font-style: bold;
+    width: 70%;
+    margin-top: 10px;
+    font-size: 0.7vw;
+    :hover{
+        color: white;
+    }
+}
+
+
+footer{
+width: 21vw;
+position: fixed;
+  left: 15px;
+  width: 20vw;
+  bottom: 10px;
+  color: white;
+  cursor: pointer;
+}
+
 
 .sidebar-socials {
-    margin: 0 10px;
+
+    margin:10px 5px;
     font-size: 2rem;
     color: white;
 }
@@ -77,9 +98,11 @@
         color: gray;
     }
     .sidebar #show-menu:checked ~ .sidebar-menu-icon i::before {
+        transition: all 0.3s ease;
         font-size: xx-large;
-        content: "\f00d";                           
+        content: "\f00d";
     }
+
     .content {
         display: block;
         position: fixed;
