--- a/src/assets/scss/global/_base.scss
+++ b/src/assets/scss/global/_base.scss
@@ -49,3 +49,6 @@ img {
   height: 5px;
   background-color: colors.$black;
 }
+.Button-To-Previous-Page{
+  background-image: url("../../img/ReturnButton.png");
+}
