--- a/src/assets/scss/components/_sidebar.scss
+++ b/src/assets/scss/components/_sidebar.scss
@@ -15,7 +15,7 @@
     height: 100vh;
     min-width: 300px;
     max-width: 425px;
-    padding: 0 25px;
+    padding: 0 50px;
     display: flex;
 }
 
@@ -25,61 +25,84 @@
 
 .sidebar-container {
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-top: 30vh;
 }
 
 .sidebar-logo {
     width: 200px;
 }
 
-.sidebar-content {
-    width: 100%;
-    margin-top: 100px;
-    font-size: 16px;
+.sidebar-subtitle {
+    margin-top: 25px;
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 1.35;
+    margin-bottom: 5px;
+    text-align: center;
 }
 
-.sidebar-content-next {
-    display: flex;
-    justify-content: center;
-    font-style: bold;
-    text-decoration: underline;
-    width: 100%;
+.sidebar-text {
     margin-top: 30px;
-    font-size: 1.2vw;
+    font-size: 16px;
+    line-height: 1.35;
+    margin-bottom: 5px;
+}
+
+.sidebar-text-par {
+    font-size: 16px;
+    line-height: 1.35;
+}
+
+.sidebar-reseaux {
+    margin-bottom: 10px;
 }
 
 .sidebar-footer {
-
-    color: black;
-    font-style: bold;
-    width: 70%;
+    color: #000000;
     margin-top: 10px;
-    font-size: 0.7vw;
+    padding-bottom: 30px;
 
-    :hover {
-        color: white;
+    &-nav {
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+    }
+
+    &-link {
+        position: relative;
+        padding-bottom: 10px;
+        font-weight: 700;
+        font-size: 10px;
+
+        &:hover {
+            color: white !important;
+
+            span {
+                color: #000 !important;
+            }
+        }
+
+        &:visited {
+            color: #000000;
+        }
     }
 }
 
-
-footer {
-    width: 21vw;
-    position: fixed;
-    left: 15px;
-    width: 20vw;
-    bottom: 10px;
-    color: white;
-    cursor: pointer;
+.sidebar-spacing {
+    margin: 0 5px;
 }
 
+.sidebar-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+}
 
-.sidebar-socials {
-
+.sidebar-logoImg {
     margin: 10px 5px;
-    font-size: 2rem;
-    color: white;
 }
 
 .sidebar-menu-icon {
@@ -90,7 +113,7 @@ footer {
 
 }
 
-@include mixins.breakpoint-up('mobile') {
+@include mixins.breakpoint-down('mobile') {
     .sidebar {
         background-color: transparent;
         height: 100vh;
@@ -113,11 +136,13 @@ footer {
         content: "\f00d";
     }
 
-    .content {
+    .sidebar-content {
         display: block;
         position: fixed;
-        background-color: #0036C2;
-        background-attachment: fixed;
+        background: hsla(222, 97%, 76%, 1);
+        background: linear-gradient(270deg, hsla(222, 97%, 76%, 1) 0%, hsla(274, 66%, 70%, 1) 100%);
+        background: -moz-linear-gradient(270deg, hsla(222, 97%, 76%, 1) 0%, hsla(274, 66%, 70%, 1) 100%);
+        background: -webkit-linear-gradient(270deg, hsla(222, 97%, 76%, 1) 0%, hsla(274, 66%, 70%, 1) 100%);
         height: 200%;
         left: -100%;
         margin-left: 0;
