--- a/src/assets/scss/variables/_mixins.scss
+++ b/src/assets/scss/variables/_mixins.scss
@@ -3,9 +3,23 @@
 /// Mixin to manage responsive breakpoints
 /// @param {String} $breakpoint - Breakpoint name
 /// @require size.$breakpoints
+@mixin breakpoint-down($breakpoint) {
+  @if map-has-key(size.$breakpoints, $breakpoint) {
+    @media (max-width: map-get(size.$breakpoints, $breakpoint)) {
+      //changed from min-width to max-width 
+      @content;
+    }
+  }
+}
+
+
+/// Mixin to manage responsive breakpoints on mobile first
+/// @param {String} $breakpoint - Breakpoint name
+/// @require size.$breakpoints
 @mixin breakpoint-up($breakpoint) {
   @if map-has-key(size.$breakpoints, $breakpoint) {
-    @media (max-width: map-get(size.$breakpoints, $breakpoint)) {    //changed from min-width to max-width 
+    @media (min-width: map-get(size.$breakpoints, $breakpoint)) {
+      //changed from min-width to max-width 
       @content;
     }
   }
