--- a/src/assets/scss/components/_sidebar.scss
+++ b/src/assets/scss/components/_sidebar.scss
@@ -5,18 +5,19 @@
 
 .sidebar {
     background: hsla(222, 97%, 76%, 1);
-
     background: linear-gradient(270deg, hsla(222, 97%, 76%, 1) 0%, hsla(274, 66%, 70%, 1) 100%);
-
     background: -moz-linear-gradient(270deg, hsla(222, 97%, 76%, 1) 0%, hsla(274, 66%, 70%, 1) 100%);
-
     background: -webkit-linear-gradient(270deg, hsla(222, 97%, 76%, 1) 0%, hsla(274, 66%, 70%, 1) 100%);
-
     height: 100vh;
+    flex-basis: 30%;
     min-width: 300px;
     max-width: 425px;
     padding: 0 50px;
     display: flex;
+
+    @include mixins.breakpoint-up('medium') {
+        flex-basis: 40%;
+    }
 }
 
 .sidebar input[type="checkbox"] {
@@ -113,9 +114,9 @@
 
 }
 
-@include mixins.breakpoint-down('mobile') {
+@include mixins.breakpoint-down('small') {
     .sidebar {
-        background-color: transparent;
+        background: transparent;
         height: 100vh;
         width: 100%;
         max-width: 450px;
@@ -137,7 +138,7 @@
     }
 
     .sidebar-content {
-        display: block;
+        display: flex;
         position: fixed;
         background: hsla(222, 97%, 76%, 1);
         background: linear-gradient(270deg, hsla(222, 97%, 76%, 1) 0%, hsla(274, 66%, 70%, 1) 100%);
@@ -152,7 +153,7 @@
         z-index: 1;
     }
 
-    .sidebar #show-menu:checked~.content {
+    .sidebar #show-menu:checked~.sidebar-content {
         left: 0;
     }
 }
