--- a/src/assets/scss/components/auth/_userChoice.scss
+++ b/src/assets/scss/components/auth/_userChoice.scss
@@ -1,19 +1,19 @@
-@use '../variables/colors';
-@use '../variables/fonts';
+@use '../../variables/colors';
+@use '../../variables/fonts';
 
 .test {
-        width: 100%;
-        height: 100vh;
-        display: flex;
-        align-items: center;
-        justify-content: center;     
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-.title-header{
+.title-header {
     border-bottom: 5px solid gray;
 }
 
-.radio-container{
+.radio-container {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -26,36 +26,38 @@
 }
 
 
-input[type="radio"].role + label {
-   background-color: #E4E4E4;
-height: 10vh;
-width: 50vw;
-color: colors.$primary;
-line-height: 1.5;
-border-radius: 5px;
-font-size: x-large;
-margin: 5px;
-text-align: center;
-cursor: pointer;
-vertical-align: middle;
+input[type="radio"].role+label {
+    background-color: #E4E4E4;
+    height: 10vh;
+    width: 50vw;
+    color: colors.$primary;
+    line-height: 1.5;
+    border-radius: 5px;
+    font-size: x-large;
+    margin: 5px;
+    text-align: center;
+    cursor: pointer;
+    vertical-align: middle;
 
-    
+
 }
 
-input[type="radio"].role:checked + label {
+input[type="radio"].role:checked+label {
     background-color: #E4E4E4;
     font-weight: bold;
     font-size: xx-large;
 }
 
-.button-container{
+.button-container {
     display: block;
-    margin-top: 35px;;
+    margin-top: 35px;
+    ;
     margin-left: 45vw;
     height: 2vw;
     width: 5vw;
 }
-.button{
+
+.button {
     padding: 10px 15px;
     background-color: colors.$primary;
     border-radius: 25px;
@@ -66,7 +68,7 @@ input[type="radio"].role:checked + label {
     cursor: pointer;
 }
 
-.button:hover{
+.button:hover {
     background-color: #FFF;
     border: solid 3px colors.$primary;
     color: colors.$primary;
