--- a/src/assets/scss/components/layout/_sidebar.scss
+++ b/src/assets/scss/components/layout/_sidebar.scss
@@ -1,6 +1,6 @@
-@use '../variables/colors';
-@use '../variables/fonts';
-@use '../variables/mixins';
+@use '../../variables/colors';
+@use '../../variables/fonts';
+@use '../../variables/mixins';
 
 
 .sidebar {
