--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -1,4 +1,3 @@
-
 /* 1 - requirements */
 @use 'tools/reset';
 
@@ -6,14 +5,14 @@
 @use 'global/base';
 
 /* 3 - components */
-@use 'components/forms';
-@use 'components/login';
-@use 'components/sidebar';
-@use 'components/userChoice';
-@use 'components/Biography';
-@use 'components/ASD';
+@use 'components/auth/forms';
+@use 'components/layout/sidebar';
+@use 'components/auth/userChoice';
+@use 'components/auth/Biography';
+@use 'components/auth/ASD';
 
 /* 4 - pages */
 
 @use 'pages/home';
 @use 'pages/notFound';
+@use 'pages/auth/login';
