--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -10,6 +10,7 @@
 @use 'components/auth/userChoice';
 @use 'components/auth/Biography';
 @use 'components/auth/ASD';
+@use 'components/common/btn.scss';
 
 /* 4 - pages */
 
