--- a/src/assets/scss/components/layout/_sidebar.scss
+++ b/src/assets/scss/components/layout/_sidebar.scss
@@ -76,6 +76,7 @@
         padding-bottom: 10px;
         font-weight: 700;
         font-size: 10px;
+        transition: color 0.25s ease-in-out;
 
         &:hover {
             color: white !important;
@@ -123,7 +124,7 @@
         padding: 0 25px;
         position: fixed;
         z-index: 1;
-
+        left: -100%;
     }
 
     .sidebar-menu-icon {
