--- a/src/assets/scss/global/_base.scss
+++ b/src/assets/scss/global/_base.scss
@@ -10,15 +10,21 @@
 }
 
 html {
-  font-size: 62.5%; /* 1rem = 10px */
+  font-size: 62.5%;
+  /* 1rem = 10px */
   overflow-x: hidden;
 }
 
 body {
-  font-size: 1.4rem; /* 14px by default */
+  font-size: 1.4rem;
+  /* 14px by default */
   font-family: fonts.$font-main;
   background-color: colors.$white;
   width: 100%;
+
+  ::selection {
+    background: hsla(222, 97%, 76%, 1) !important;
+  }
 }
 
 main {
@@ -39,6 +45,7 @@ img {
   height: auto;
   vertical-align: middle;
 }
+
 .w3-grey {
   background-color: green;
 }
@@ -49,6 +56,7 @@ img {
   height: 5px;
   background-color: colors.$black;
 }
-.Button-To-Previous-Page{
+
+.Button-To-Previous-Page {
   background-image: url("../../img/ReturnButton.png");
 }
