--- a/src/assets/scss/pages/auth/_login.scss
+++ b/src/assets/scss/pages/auth/_login.scss
@@ -29,5 +29,10 @@
     text-align: center;
     font-size: 16px;
     margin-bottom: 50px;
+    line-height: 1.4;
     width: 70%;
+}
+
+.login-register {
+    padding-top: 90px;
 }
