--- a/src/assets/scss/variables/_colors.scss
+++ b/src/assets/scss/variables/_colors.scss
@@ -1,5 +1,6 @@
 $primary: #B87FE5;
 $white: #fff;
+$grey: #5F5F5F;
 $black: #000;
 $secondary: #86AAFD;
 $gradient: linear-gradient(0deg, #B87FE5 0%, #86AAFD 100%);
