--- a/src/assets/scss/components/auth/_forms.scss
+++ b/src/assets/scss/components/auth/_forms.scss
@@ -95,3 +95,7 @@
 .form-missing {
     padding-top: 15px;
 }
+.login-invisible-button{
+    border: transparent;
+    background-color: transparent;
+}
