--- a/src/assets/scss/components/layout/_sidebar.scss
+++ b/src/assets/scss/components/layout/_sidebar.scss
@@ -132,6 +132,7 @@
         height: fit-content;
         z-index: 6;
         width: fit-content;
+        margin-top: 1%;
     }
 
     .sidebar #show-menu:checked~.sidebar-menu-icon i::before {
@@ -141,7 +142,7 @@
 
    .sidebar #show-menu:checked~.sidebar-menu-icon  {
         position: relative;
-        margin-left: 100%;
+        margin-left: 95%;
    }
 
 
@@ -164,4 +165,58 @@
     .sidebar #show-menu:checked~.sidebar-content {
         left: 0;
     }
+
+.sidebar-text {
+    margin-top: 30px;
+    font-size: 16px;
+    line-height: 1.35;
+    margin-bottom: 5px;
+    text-align: center;
+}
+
+.sidebar-text-par {
+    font-size: 16px;
+    line-height: 1.35;
+    text-align: center;
+}
+
+.sidebar-reseaux {
+    margin-bottom: 10px;
+    text-align: center;
+}
+
+.sidebar-footer {
+    color: #000000;
+    margin-top: 10px;
+    padding-bottom: 30px;
+    text-align: center;
+
+    &-nav {
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
+    }
+
+    &-link {
+        position: relative;
+        padding-bottom: 10px;
+        font-weight: 700;
+        font-size: 10px;
+        transition: color 0.25s ease-in-out;
+
+        &:hover {
+            color: white !important;
+
+            span {
+                color: #000 !important;
+            }
+        }
+
+        &:visited {
+            color: #000000;
+        }
+    }
+}
+
 }
