--- a/src/assets/scss/components/layout/_sidebar.scss
+++ b/src/assets/scss/components/layout/_sidebar.scss
@@ -123,8 +123,11 @@
         max-width: 450px;
         padding: 0 25px;
         position: fixed;
-        z-index: 1;
+        z-index: 1;     
+        pointer-events: none;
     }
+
+  
 
     .sidebar-menu-icon {
         display: flex;
@@ -133,6 +136,7 @@
         z-index: 6;
         width: fit-content;
         margin-top: 1%;
+        pointer-events: all;
     }
 
     .sidebar #show-menu:checked~.sidebar-menu-icon i::before {
@@ -141,8 +145,8 @@
    }
 
    .sidebar #show-menu:checked~.sidebar-menu-icon  {
-        position: relative;
-        margin-left: 95%;
+        position: fixed;
+        left: 90%;
    }
 
 
@@ -164,7 +168,10 @@
 
     .sidebar #show-menu:checked~.sidebar-content {
         left: 0;
+        z-index: 1;
     }
+
+
 
 .sidebar-text {
     margin-top: 30px;
