--- a/src/assets/scss/components/auth/_Speudo.scss
+++ b/src/assets/scss/components/auth/_Speudo.scss
@@ -1,3 +1,7 @@
-.login-input-Speudo .login-input-Prenom .login-input-Nom {
-    background: url("../../icons/sms.svg") no-repeat scroll 10px 10px #E4E4E4 !important;
+.Speudo-Bnt-Next-Page {
+    margin-left: 25vw;
+}
+
+.Speudo-Input-Min-Width {
+    min-width: 33.5vw;
 }
