--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -9,6 +9,7 @@
 @use 'components/layout/sidebar';
 @use 'components/auth/userChoice';
 @use 'components/auth/NewAccountFirstStep';
+@use 'components/auth/Speudo';
 @use 'components/auth/Biography';
 @use 'components/auth/ASD';
 @use 'components/common/btn.scss';
