--- a/src/assets/scss/components/auth/_Biography.scss
+++ b/src/assets/scss/components/auth/_Biography.scss
@@ -9,6 +9,13 @@
     min-height: 15em;
     font-size: 18px;
     resize: none;
+    overflow: hidden;
+
+    //placeholder
+    &::placeholder {
+        color: #5C5C5C;
+        font-size: 18px;
+    }
 }
 
 .Bio-Text-box:focus {
@@ -24,13 +31,13 @@
 }
 
 .Bio-ignore-font {
-    margin-left: 44em;
     border-color: transparent;
     background-color: transparent;
     font-family: 'Luciole';
     font-style: normal;
     font-weight: 400;
-    font-size: 16px;
+    font-size: 14px;
+    width: 100%;
     line-height: 19px;
     text-decoration-line: underline;
     color: #5C5C5C;
