--- a/src/assets/scss/components/auth/_Biography.scss
+++ b/src/assets/scss/components/auth/_Biography.scss
@@ -9,6 +9,8 @@
     min-height: 15em;
     font-size: 18px;
     resize: none;
+    padding-top: 10px;
+    padding-left: 20px;
     overflow: hidden;
 
     //placeholder
