Page for Follow an account add the start

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -1,3 +1,5 @@
+
+
 /* 1 - requirements */
 @use 'tools/reset';
 
@@ -13,6 +15,7 @@
 @use 'components/auth/Biography';
 @use 'components/auth/ASD';
 @use 'components/common/btn.scss';
+@use 'components/auth/Follow.scss';
 
 /* 4 - pages */
 
