--- a/src/assets/scss/components/auth/_userChoice.scss
+++ b/src/assets/scss/components/auth/_userChoice.scss
@@ -102,8 +102,7 @@ input[type="radio"].role:checked+label {
     transition: 0.3s;
 }
 
-.form-input-icon {
-
+.form-input-icon-chevron {
     right: 15px;
     cursor: pointer;
     display: flex;
