--- a/src/assets/scss/components/auth/_forms.scss
+++ b/src/assets/scss/components/auth/_forms.scss
@@ -99,3 +99,11 @@
     border: transparent;
     background-color: transparent;
 }
+
+.form-top-margin-10{
+    margin-top: 10vh;
+}
+
+.form-top-margin-2{
+    margin-top: 2vh;
+}
