--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -9,8 +9,11 @@
 /* 3 - components */
 @use 'components/auth/forms';
 @use 'components/layout/sidebar';
+@use 'components/layout/InternalSideBar';
 @use 'components/auth/userChoice';
 @use 'components/auth/NewAccountFirstStep';
+@use 'components/auth/NewsPage';
+@use 'components/auth/Post';
 @use 'components/auth/Speudo';
 @use 'components/auth/Biography';
 @use 'components/auth/ASD';
