--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -19,6 +19,7 @@
 @use 'components/auth/ASD';
 @use 'components/common/btn.scss';
 @use 'components/auth/Follow.scss';
+@use 'components/auth/ComingSoon.scss';
 
 /* 4 - pages */
 
