--- a/src/assets/scss/components/auth/Post.scss
+++ b/src/assets/scss/components/auth/Post.scss
@@ -1,4 +1,5 @@
 .Post {
+    margin-top: 5vh;
     display: flex;
     flex-direction: column;
     align-items: space-between;
@@ -10,14 +11,33 @@
     box-shadow: -1px 4px 10px 1px grey;
     margin-left: 3vw;
 }
+.Post-input {
+    margin-top: 5vh;
+    border: none;
+    width: 95%;
+    background-color: #f5f5f5;
+    margin-left: 1vw;
+    margin-bottom: 2vh;
+    resize: vertical;
+}
+.Post-text {
+    margin-top: 5vh;
+    border: none;
+    width: 95%;
+    background-color: #f5f5f5;
+    margin-left: 1vw;
+    resize: vertical;
+    padding-bottom: 2vh;
+    border-bottom: 2px solid black;
+}
 
 .Post-Header {
     margin-left: 0.5vw;
     margin-top: 1vh;
     display: flex;
     flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
+    align-items: start;
+    justify-content: start;
     height: fit-content;
     width: 39vw;
     background-color: #f5f5f5;
@@ -34,7 +54,7 @@
 .Post-Header-Flex {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: start;
     justify-content: start;
     height: fit-content;
     width: fit-content;
@@ -43,6 +63,48 @@
 .Post-Header-Names {
     font-size: 1.5rem;
     font-weight: bold;
+    margin-top: 1vh;
+    margin-bottom: 0.5vh;
+    margin-left: 1vw;
+}
+
+.Post-Header-AsdList {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: start;
+    height: fit-content;
+    width: fit-content;
+}
+
+.Post-Header-AsdList-Item {
+    font-size: 1rem;
+    font-weight: bold;
     margin-top: 0.5vh;
     margin-bottom: 0.5vh;
+    margin-left: 1vw;
+    border: #B87FE5 2px solid;
+    padding: 2px;
+    border-radius: 5px;
+}
+
+.Post-like {
+    display: flex;
+    align-items: center;
+    justify-content: start; 
+    margin-left: 2vw;  
+    margin-top: 0.5vh;                            
+    margin-bottom: 0.5vh;                            
+}
+.Post-like > img {
+    height: 20px;
+    width: 20px;
+    margin-right: 1vw;
+    cursor: pointer;
+}
+
+.Post-like > p {
+    font-size: 1.5rem;
+    font-weight: bold;
+    margin-right: 1vw;
 }
