add Account Page

--- a/src/assets/scss/components/auth/Post.scss
+++ b/src/assets/scss/components/auth/Post.scss
@@ -88,6 +88,17 @@
     border-radius: 5px;
 }
 
+.Post-Header-AsdList-Item2 {
+    font-size: 2rem;
+    margin-top: 0.5vh;
+    margin-bottom: 0.5vh;
+    margin-left: 1vw;
+    border: #B87FE5 2px solid;
+    padding: 10px;
+    border-radius: 51px;
+}
+
+
 .Post-like {
     display: flex;
     align-items: center;
