--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -20,6 +20,7 @@
 @use 'components/common/btn.scss';
 @use 'components/auth/Follow.scss';
 @use 'components/auth/ComingSoon.scss';
+@use 'components/auth/Account.scss';
 
 /* 4 - pages */
 
